# changelog-ai

./: .gitignore  README.md  pyproject.toml
src/changelog_ai/: __init__.py  cli.py  generator.py  git_collector.py  providers.py
tests/: test_cli.py  test_generator.py  test_git_collector.py  test_integration_llm.py  test_providers.py
